[tool.poetry]
name = "obsidian-helpers"
version = "0.1.0"
description = ""
authors = ["Konstantin Meshcheryakov <kmeshcheryakov@klika-tech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
toml = "^0.10.2"
python = ">=3.11,<3.13"
pyside6 = "^6.7.0"
pyhotkey = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
